Uploaded new source.
Redid quite a bit. The code is a lot more readable.

Changelog:
Rewrote Gunvarrel's Function class.
Renamed DataUtils to MapDataUtils; rewrote also.
SafeThread is now an abstract class.
SlideshowThread is now "safer".
ImageRenderer isn't such a  sloppy mess anymore.
Removed classes: GifAnimation, MapData, PlayerData, AnimatedRenderer,
AnimeThread, MapThreadGroup.